--- a/css/estilos.css
+++ b/css/estilos.css
@@ -35,6 +35,9 @@ h1 {
 .tecla {
   background-color: var(--branca);
   border-radius: 30px;
+
+  h1 {
+    color: var(--branca);
   box-shadow: 3px 3px 0 var(--cinza);
   color: var(--vermelha);
   cursor: pointer;
