--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,7 +34,8 @@ h1 {
 
 
   .tecla {
-    color: var(--branca);
+   background-color: var(--branca);
+   border-radius: 30px;
   box-shadow: 3px px 0 var(--cinza);
   color: var(--vermelha);
   cursor: pointer;
