--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  background: url("../images/img6265875ee9ed50.63767961.png");
   align-items: center;
   background: linear-gradient(45deg, #a7cfdf 0%,#23538a 100%);
   display: flex;
